--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </div>
       <div class="fade-wrapper">
-        <img class="profile-img" src="{C7262958-AB09-4828-928B-5F05C629A47D}.png" alt="Carletes Foto">
+        <img class="profile-img" src="carletes.png" alt="Carletes Foto">
       </div>
     </div>
   </section>
